<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/accent_white"
        android:baselineAligned="false"
        android:padding="8dp"
        android:id="@+id/proWelcomeView"
        tools:context=".WelcomeActivity">

        <fragment
            xmlns:lantern="http://schemas.android.com/apk/res-auto"
            android:id="@+id/titlebar_fragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            class="org.getlantern.lantern.fragment.TitleBar"
            lantern:disableBackButton="true"
            lantern:titleBackgroundColor="@drawable/nav_background_white"
            lantern:titleText="@string/pro_welcome_text"/>


        <LinearLayout
            android:id="@+id/welcome"
            android:orientation="vertical"
            android:layout_marginTop="68dp"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_white">

            <ImageView
                android:id="@+id/pro_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text"
                android:adjustViewBounds="true"
                android:paddingBottom="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/pro_welcome"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/thanks_purchase"
                android:layout_width="fill_parent"
                android:layout_height="21dp"
                android:textAppearance="@style/MediumText"
                android:text="@string/thanks_purchase"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/invite_friends"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/invite_friends_welcome"
                android:textSize="14sp"
                android:alpha=".87"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueToProBtn"
            android:layout_height="36dp"
            android:layout_width="216dp"
            android:text="@string/continue_to_pro"
            android:textAppearance="@style/MediumText"
            android:textSize="14sp"
            android:elevation="2dp"
            android:minHeight="48dp"
            android:textAllCaps="true"
            android:textColor="@color/accent_white"
            android:textStyle="bold"
            android:clickable = "true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/send_btn"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="continueToPro" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
