<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/two_year_plan_bg"
        android:orientation="vertical">

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/webViewLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            >

            <ImageView
                android:id="@+id/close"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:onClick="closeWebView"
                android:src="@drawable/close_on" />

            <WebView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/webView"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                />
        </FrameLayout>

        <fragment
            xmlns:lantern="http://schemas.android.com/apk/res-auto"
            android:id="@+id/titlebar_fragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            class="org.getlantern.lantern.fragment.TitleBar"
            lantern:titleBackgroundColor="@drawable/nav_background_white"
            lantern:titleImage="@drawable/lantern_pro_plans"/>

        <LinearLayout
            android:id="@+id/plansView"
            android:orientation="vertical"
            android:scaleType="fitXY"
            android:layout_weight="1"
            android:background="@color/accent_white"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/wall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/wall"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/upgrade_to_lantern_pro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MediumText"
                android:text="@string/upgrade_to_lantern_pro"
                android:textSize="24sp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#000000"/>

            <LinearLayout
                android:id="@+id/proFeatures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/leftFeatures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/rightFeatures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:orientation="vertical" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/available_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/proFeatures"
                android:textAppearance="@style/LightText"
                android:text="@string/pro_available_for"
                android:textSize="10sp"
                android:textColor="@color/available_for"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:id="@+id/zigzag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="1dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:src="@drawable/zigzag"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioPaymentOption"
                android:checkedButton="@+id/radioFWP"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/radioPlans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:theme="@style/WelcomeButtonTheme"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/creditcard_alipay"/>

                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/radioFWP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:theme="@style/WelcomeButtonTheme"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/fastworldpay"/>
            </RadioGroup>

            <LinearLayout 
                android:id="@+id/plansSection"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <RelativeLayout
                    android:id="@+id/two_year_plan"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:background="@color/two_year_plan_bg">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/twoYearCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingLeft="16dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:alpha=".87"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/twoYearCost"
                        android:paddingLeft="16dp"
                        android:text="@string/two_years"
                        android:textSize="12sp"
                        android:alpha=".54"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/twoYearBtn"
                        android:layout_height="33dp"
                        android:layout_width="88dp"
                        android:text="@string/select"
                        android:textAppearance="@style/MediumText"
                        android:textSize="14sp"
                        android:elevation="2dp"
                        android:minHeight="40dp"
                        android:textAllCaps="true"
                        android:textColor="@color/accent_white"
                        android:textStyle="bold"
                        android:clickable = "true"
                        android:background="@color/pink"
                        android:layout_marginRight="18dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30dp"
                        android:onClick="selectPlan" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/one_year_plan"
                    android:layout_width="fill_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/year_background"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/oneYearCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:gravity="left|center_vertical"
                        android:layout_alignParentLeft="true"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:alpha=".87"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/oneYearCost"
                        android:textSize="12sp"
                        android:text="@string/one_year"
                        android:alpha=".54"
                        android:textColor="@color/black"/>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/oneYearBtn"
                        android:layout_height="33dp"
                        android:layout_width="88dp"
                        android:text="@string/select"
                        android:textAppearance="@style/MediumText"
                        android:textSize="14sp"
                        android:elevation="2dp"
                        android:minHeight="40dp"
                        android:textAllCaps="true"
                        android:textColor="@color/accent_white"
                        android:textStyle="bold"
                        android:clickable = "true"
                        android:background="@color/pink"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical ="true"
                        android:layout_centerInParent="true"
                        android:onClick="selectPlan" />

                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/resellerSection"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:clickable="true"
                    android:background="@drawable/reseller_bg"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/resellerText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:gravity="center"
                        android:clickable="true"
                        android:text="@string/purchased_from_reseller"
                        android:textSize="12sp"
                        android:textColor="@color/reseller_text"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
